Ref (web-accounts) 'PP-014': Enhanced account widget by updating the account card component to include account type display and improved layout. Adjusted CSS for better spacing and visual consistency, and modified HTML structure to accommodate new account type information. Updated TypeScript types to ensure account type is required in the account model.

--- a/frontend/web/src/app/components/ui/widgets/account/account.css
+++ b/frontend/web/src/app/components/ui/widgets/account/account.css
@@ -61,7 +61,7 @@ section:hover {
   @apply flex flex-row items-center justify-between;
 }
 .card-details {
-  @apply flex-1 mt-8 flex flex-col items-start justify-between;
+  @apply flex-1 mt-6 flex flex-col items-start justify-between;
 
   .balance {
     @apply flex flex-row items-center gap-2;
@@ -79,11 +79,7 @@ section:hover {
     @apply w-full flex flex-row items-center justify-between;
 
     .account-name {
-      @apply flex flex-row items-center gap-3;
-
-      p {
-        @apply capitalize text-sm;
-      }
+      @apply flex flex-row items-start gap-1.5;
     }
 
     .card-options {
